minified css/added some things

--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@ title: "404: Page not found"
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
+  <h1 class="page-title">OhEmGe ~ it's a Four Oh Four</h1>
+  <p class="lead">Larry the blog elf walked off the job again, i'll try to find what you want but i'm just a temp.  It may be better if you just <a href="/">Head back home</a> unless you really have nothing to do and want to stare at the screen. </p>
 </div>
